2011-01-19  Peter Bloomfield

	Pass default screen instead of NULL to gtk_show_uri

	* libbalsa/identity.c (help_ident_cb):
	* libbalsa/smtp-server.c (smtp_server_response):
	* src/address-book-config.c (help_button_cb):
	* src/balsa-mime-widget-message.c (extbody_call_url):
	* src/balsa-mime-widget-text.c (store_button_coords),
	(check_over_url), (handle_url):
	* src/filter-edit-callbacks.c (condition_dialog_response),
	(fe_dialog_response):
	* src/filter-run-callbacks.c (fr_dialog_response):
	* src/folder-conf.c (folder_conf_response):
	* src/main-window.c:
	* src/pref-manager.c (balsa_help_pbox_display):
	* src/sendmsg-window.c (on_open_url_cb):
	* src/toolbar-prefs.c (tp_dialog_response_cb):

2011-01-17  Peter Bloomfield

	* src/sendmsg-window.c (create_email_or_string_entry): new
	override font API.

2011-01-17  Peter Bloomfield

	* src/balsa-mime-widget-image.c (bmwi_context_changed_cb),
	(balsa_mime_widget_new_image): set background color from
	viewport.

2011-01-17  Peter Bloomfield

	* src/balsa-mime-widget-crypto.c
	(balsa_mime_widget_signature_widget),
	(balsa_mime_widget_crypto_frame): reorganize window-showing.

2011-01-17  Peter Bloomfield

	* src/balsa-icons.c (balsa_register_pixbufs): new icon-render
	API.
	* src/balsa-mime-widget.c (balsa_mime_widget_new),
	(balsa_mime_widget_new_unknown): ditto.
	* src/toolbar-prefs.c (tp_store_set): ditto.

2011-01-17  Peter Bloomfield

	* src/balsa-app.h: port from GdkColor to GdkRGBA.
	* src/balsa-cite-bar.c (balsa_cite_bar_draw): ditto, and from
	GtkStyle to GtkStyleContext.
	* src/balsa-message.c (bm_on_set_style), (balsa_message_init),
	(get_crypto_content_icon): ditto.
	* src/balsa-mime-widget-image.c (balsa_mime_widget_new_image):
	ditto.
	* src/balsa-mime-widget-message.c (balsa_mime_widget_new_message),
	(balsa_mime_widget_new_message_tl), (bm_header_widget_realized),
	(bm_header_widget_set_style), (bm_header_widget_new),
	(bmwm_buffer_set_prefs),